Bug Fixes
Fixed a couple of overlapping and color bugs

--- a/com.shiinaskins.teamspeak/darkgreen.css
+++ b/com.shiinaskins.teamspeak/darkgreen.css
@@ -548,7 +548,6 @@
 
 
 
-
 /* SIDEBAR */
 
 /* bookmarks resized positioned tabs */
@@ -791,6 +790,11 @@
 /* open external link checkbox color */
 .ts-checkbox .ts-checkbox-inner .ts-checkbox-background {
     background: var(--arctic1) !important;
+}
+
+/* system chat messages background */
+.ts-chat-message-system-body {
+    background: var(--transparent) !important;
 }
 
 
