--- a/com.shiinaskins.teamspeak/darkpurple.css
+++ b/com.shiinaskins.teamspeak/darkpurple.css
@@ -793,6 +793,11 @@
     background: var(--arctic1) !important;
 }
 
+/* system chat messages background */
+.ts-chat-message-system-body {
+    background: var(--transparent) !important;
+}
+
 
 
 /* SETTINGS */
