--- a/com.shiinaskins.teamspeak/lightNue.css
+++ b/com.shiinaskins.teamspeak/lightNue.css
@@ -59,8 +59,8 @@
     --emojibg: var(--pastel) !important;
     --chatbox: var(--arctic1) !important;
     --chatinput: var(--arctic1) !important;
-    --headerbg: var(--alpine1) !important;
-    --headerblur: blur(20px) !important;
+    --headerbg: var(--alpine) !important;
+    --smallboxes: var(--alpine) !important;
 
 }
 
@@ -93,6 +93,9 @@
 
 
 /* DASHBOARD & SERVERS */
+#ts-app-loading-overlay {
+    background-color: var(--tsv-bg) !important;
+}
 
 /* main application background color */
 #app, .main, .body {
@@ -157,13 +160,21 @@
 /* set custom background detailed chat boxes */
 .ts-chat-room-event-detailed .ts-chat-room-event-bubble {
     box-shadow: var(--hard-shadow) !important;
-    margin-bottom: 2px !important;
+    margin-top: 8px !important;
+    margin-bottom: 8px !important;
+    margin-right: 10px !important;
+}
+
+/* minimum width for timespamp in chat */
+.ts-chat-room-event-detailed .ts-chat-room-event-timestamp-container {
+    min-width: 40px !important;
 }
 
 /* set custom background detailed chat boxes */
 .ts-chat-room-event-detailed.ownclient .ts-chat-room-event-bubble:not(.deleted) {
     box-shadow: var(--hard-shadow) !important;
-    margin-bottom: 2px !important;
+    margin-top: 8px !important;
+    margin-bottom: 8px !important;
 }
 
 /* set custom background detailed chat boxes */
@@ -181,14 +192,20 @@
     border-left: var(--tsv-separation-border) !important;
 }
 
-/* header blur armount */
-.tsv-floating-background {
-    backdrop-filter: var(--headerblur) !important;
-}
-
 /* header bottom border */
 .tsv-header {
     border-bottom: 0px !important;
+    background: var(--headerbg) !important;
+}
+
+.ts-breadcrumbs[data-v-28bd543f] {
+    background: var(--alpine) !important;
+    box-shadow: var(--hard-shadow) !important;
+}
+
+/* mute buttons background color */
+.tsv-central-toolbar-buttons:before {
+    background: var(--smallboxes) !important;
 }
 
 /* top tool bar header transparent */
@@ -200,6 +217,7 @@
 /* header opacity fully displayed */
 .tsv-header.tsv-header-floating:before {
     opacity: 1 !important;
+    background: var(--headerbg) !important;
 }
 
 /* widget box border color */
@@ -322,8 +340,9 @@
     background-color: var(--tabs-colors) !important;
     box-shadow: var(--hard-shadow) !important;
     width: 90% !important;
-    margin-left: 5px !important;
-    margin-top: 5px !important;
+    margin-left: 10px !important;
+    margin-top: 10px !important;
+    margin-right: 10px !important;
 }
 
 /* channel selection box shadow */
@@ -393,8 +412,7 @@
 .tsv-dashboard-widget .ts-chat-input-container, .tsv-dashboard-widget .ts-chat-input-container-content, .tsv-dashboard-widget .ts-chat-input-emoji-picker,
 .tsv-dashboard-widget .ts-chat-input-emoji-picker .ts-chat-input-tab.active, .tsv-sidebar .ts-chat-input-container, .tsv-sidebar .ts-chat-input-container-content,
 .tsv-sidebar .ts-chat-input-emoji-picker, .tsv-sidebar .ts-chat-input-emoji-picker .ts-chat-input-tab.active {
-    background: var(--transparent) !important;
-    backdrop-filter: var(--tsv-blur) !important;
+    background: var(--pastel) !important;
 }
 
 /* chatbox container content search */
@@ -412,14 +430,6 @@
 
 .tsv-activity-secondary .tsv-header.tsv-header-floating, .tsv-dashboard-widget .tsv-header.tsv-header-floating, .tsv-sidebar .tsv-header.tsv-header-floating {
     background: var(--headerbg) !important;
-    backdrop-filter: var(--headerblur) !important;
-}
-
-/* blur the header */
-.tsv-dashboard-widget .tsv-header.tsv-header-floating, .tsv-sidebar .tsv-header.tsv-header-floating, .tsv-header:before, .tsv-activity-secondary .tsv-header:before, .tsv-dashboard-widget .tsv-header:before, .tsv-sidebar .tsv-header:before {
-    background: var(--headerbg) !important;
-    backdrop-filter: var(--headerblur) !important;
-
 }
 
 /* text color for server names */
@@ -489,7 +499,7 @@
     box-shadow: none !important;
 }
 
-/* navigationbat permissions search */
+/* navigationbar permissions search */
 .tsv-bar.tsv-navigation-bar .ts-text-input-box-inner.hideDisclosure .ts-input {
     background: var(--arctic) !important;
     box-shadow: var(--hard-shadow) !important;
@@ -497,23 +507,25 @@
 
 /* create channel text input */
 .ts-create-channel-details-actual .ts-text-input-box-inner.hideDisclosure .ts-input {
-    background: var(--arctic) !important;
-    box-shadow: var(--hard-shadow) !important;
+    background: var(--green) !important;
 }
 
 /* create channel buttons */
 .ts-create-channel-menu-buttons .tsv-button-filled {
-    background: var(--arctic) !important;
+    background: var(--pastel) !important;
     box-shadow: var(--hard-shadow) !important;
 }
 
 /* chatbox attachments background */
 .ts-chat-message-attachment .ts-chat-message-attachment-inner {
     background: var(--chatbox) !important;
-    backdrop-filter: var(--tsv-blur) !important;
     border-radius: var(--tsv-border-radius) !important;
     border: 1px solid !important;
     border-color: var(--transparent) !important;
+    box-shadow: var(--hard-shadow) !important;
+    margin-bottom: 10px !important;
+    margin-top: 2px !important;
+    padding: 3px !important;
 }
 
 /* chatbox attachments positioning */
@@ -542,6 +554,16 @@
 
 
 /* SIDEBAR */
+
+/* draggable line position */
+.tsv-activity-group:first-child {
+    margin-bottom: 10px !important;
+}
+
+/* hide black line active server tab */
+.tsv-list .tsv-item-group:before {
+    border-left: 0px !important;
+}
 
 /* bookmarks resized positioned tabs */
 .ts-bookmarks-root {
@@ -576,6 +598,16 @@
     background: var(--search) !important;
     border-radius: var(--tsv-radius) !important;
     color: var(--text-color) !important;
+}
+
+/* tabs header height */
+.tsv-sidebar-tab-header {
+    margin-bottom: 10px !important;
+}
+
+/* cearte new tab/server icons background */
+.tsv-sidebar-header-accessories.background {
+    background: var(--smallboxes) !important;
 }
 
 /* sidebar picker background */
@@ -694,7 +726,7 @@
 /* server info text */
 .tsv-server-info-grid .tsv-server-info-grid-left {
     padding-left: 5px !important;
-    padding-top: 5px !important;
+    padding-top: 10px !important;
 }
 
 /* tab selected arrow color */
@@ -778,6 +810,11 @@
 /* open external link checkbox color */
 .ts-checkbox .ts-checkbox-inner .ts-checkbox-background {
     background: var(--arctic1) !important;
+}
+
+/* system chat messages background */
+.ts-chat-message-system-body {
+    background: var(--transparent) !important;
 }
 
 
@@ -864,10 +901,15 @@
 
 /* context menu background */
 .ts-context-menu {
-    background-color: var(--context-menu) !important;
+    background-color: var(--alpine) !important;
     border: 0px !important;
-    backdrop-filter: var(--tsv-blur) !important;
     box-shadow: var(--menu-shadow) !important;
+    margin-bottom: 15px !important;
+}
+
+/* create channel and other menu background colors */
+.ts-server-connection-stats-menu, .ts-server-events-title, .ts-presence-menu, .ts-create-channel-menu {
+    background: var(--pastel) !important;
 }
 
 /* toggle background */
@@ -936,12 +978,6 @@
 .tsv-server-info-default-banner {
     background: var(--title) !important;
     opacity: 1 !important;
-}
-
-/* default channel banner name color */
-.tsv-detail-info-topic .tsv-detail-info-topic-banner, .tsv-detail-info-topic .tsv-server-info-topic-banner, .tsv-server-info-topic .tsv-detail-info-topic-banner, .tsv-server-info-topic .tsv-server-info-topic-banner {
-    background-color: var(--context-menu) !important;
-    backdrop-filter: var(--tsv-blur) !important;
 }
 
 /* remove the ts logo from channel banner */
